Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134784

macos: Crash in Voice Over/Accessiblity when resetting a table model

XMLWordPrintable

    • macOS
    • b1ed5f656 (dev), ae0bd2c52 (6.9), 0ee6ee536 (6.8)

      Compile and run the attached program.

       

      Do the following:

      • Enable accessiblity/voice ovcer (Command + F5)
      • Navigate to the table (Control+Option+Right Arrow)
      • Enter the table (Shift+Control+Option+Down Arrow)
      • Navitate to the second cell (Control+Option+Down Arrow)
      • Press the Columns++ button (with the mouse
      • The app crashes.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            albert.astals.cid.avid Albert Astals Cid
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes